[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Inventory/slot.png" type="Texture" id=1]
[ext_resource path="res://Assets/Inventory/background.png" type="Texture" id=2]
[ext_resource path="res://Inventory/Inventory.gd" type="Script" id=3]
[ext_resource path="res://Inventory/Scripts/Controls/BodyControl.gd" type="Script" id=4]
[ext_resource path="res://Inventory/Scripts/Controls/FootControl.gd" type="Script" id=6]
[ext_resource path="res://Inventory/Scripts/Slot.gd" type="Script" id=7]
[ext_resource path="res://Inventory/Scripts/Controls/HeadControl.gd" type="Script" id=8]
[ext_resource path="res://Inventory/Scripts/Controls/WeaponControl.gd" type="Script" id=9]
[ext_resource path="res://Inventory/Scripts/SelectedSlot.gd" type="Script" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Inventory" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true

[node name="HeadControl" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 8 )

[node name="HeadGridContainer" type="GridContainer" parent="HeadControl"]
margin_left = 31.0
margin_top = 25.0
margin_right = 251.0
margin_bottom = 172.0
custom_constants/vseparation = 1
custom_constants/hseparation = 4
columns = 3

[node name="HeadSlot_1" type="Panel" parent="HeadControl/HeadGridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="HeadSlot_2" type="Panel" parent="HeadControl/HeadGridContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="HeadSlot_3" type="Panel" parent="HeadControl/HeadGridContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="HeadSlot_4" type="Panel" parent="HeadControl/HeadGridContainer"]
margin_top = 65.0
margin_right = 64.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="HeadSlot_5" type="Panel" parent="HeadControl/HeadGridContainer"]
margin_left = 68.0
margin_top = 65.0
margin_right = 132.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="HeadSlot_6" type="Panel" parent="HeadControl/HeadGridContainer"]
margin_left = 136.0
margin_top = 65.0
margin_right = 200.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="HeadSelectedSlot" type="Panel" parent="HeadControl"]
margin_left = 325.0
margin_top = 160.0
margin_right = 389.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 10 )

[node name="BodyControl" type="Control" parent="."]
margin_top = 300.0
margin_right = 512.0
margin_bottom = 600.0
script = ExtResource( 4 )

[node name="BodyGridContainer" type="GridContainer" parent="BodyControl"]
margin_left = 30.0
margin_top = 146.0
margin_right = 250.0
margin_bottom = 293.0
custom_constants/vseparation = 1
custom_constants/hseparation = 4
columns = 3

[node name="BodySlot_1" type="Panel" parent="BodyControl/BodyGridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BodySlot_2" type="Panel" parent="BodyControl/BodyGridContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BodySlot_3" type="Panel" parent="BodyControl/BodyGridContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BodySlot_4" type="Panel" parent="BodyControl/BodyGridContainer"]
margin_top = 65.0
margin_right = 64.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BodySlot_5" type="Panel" parent="BodyControl/BodyGridContainer"]
margin_left = 68.0
margin_top = 65.0
margin_right = 132.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BodySlot_6" type="Panel" parent="BodyControl/BodyGridContainer"]
margin_left = 136.0
margin_top = 65.0
margin_right = 200.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BodySelectedSlot" type="Panel" parent="BodyControl"]
margin_left = 327.0
margin_top = 75.0
margin_right = 391.0
margin_bottom = 139.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 10 )

[node name="FootControl" type="Control" parent="."]
margin_left = 512.0
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 6 )

[node name="FootGridContainer" type="GridContainer" parent="FootControl"]
margin_left = 281.0
margin_top = 146.0
margin_right = 501.0
margin_bottom = 293.0
custom_constants/vseparation = 1
custom_constants/hseparation = 4
columns = 3

[node name="FootSlot_1" type="Panel" parent="FootControl/FootGridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="FootSlot_2" type="Panel" parent="FootControl/FootGridContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="FootSlot_3" type="Panel" parent="FootControl/FootGridContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="FootSlot_4" type="Panel" parent="FootControl/FootGridContainer"]
margin_top = 65.0
margin_right = 64.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="FootSlot_5" type="Panel" parent="FootControl/FootGridContainer"]
margin_left = 68.0
margin_top = 65.0
margin_right = 132.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="FootSlot_6" type="Panel" parent="FootControl/FootGridContainer"]
margin_left = 136.0
margin_top = 65.0
margin_right = 200.0
margin_bottom = 129.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="FootSelectedSlot" type="Panel" parent="FootControl"]
margin_left = 122.0
margin_top = 75.0
margin_right = 186.0
margin_bottom = 139.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 10 )

[node name="WeaponControl" type="Control" parent="."]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 300.0
script = ExtResource( 9 )

[node name="GunGridContainer" type="GridContainer" parent="WeaponControl"]
margin_left = 273.0
margin_top = 16.0
margin_right = 493.0
margin_bottom = 163.0

[node name="WeaponSlot_1" type="Panel" parent="WeaponControl/GunGridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="WeaponSlot_2" type="Panel" parent="WeaponControl/GunGridContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="WeaponSlot_3" type="Panel" parent="WeaponControl/GunGridContainer"]
margin_top = 136.0
margin_right = 64.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="WeaponSlot_4" type="Panel" parent="WeaponControl/GunGridContainer"]
margin_top = 204.0
margin_right = 64.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="WeaponSlot_5" type="Panel" parent="WeaponControl/GunGridContainer"]
margin_top = 272.0
margin_right = 64.0
margin_bottom = 336.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="WeaponSlot_6" type="Panel" parent="WeaponControl/GunGridContainer"]
margin_top = 340.0
margin_right = 64.0
margin_bottom = 404.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="WeaponSelectedSlot" type="Panel" parent="WeaponControl"]
margin_left = 123.0
margin_top = 158.0
margin_right = 187.0
margin_bottom = 222.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 10 )
